--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "softengproj1frontend": "file:",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
