--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "softengproj1frontend": "file:",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
